  instead only from leader shards. This can help to spread the read load
  better across the cluster. Obviously, using this header can result in
  "dirty reads", which are read results returning stale data or even
  not-yet-officially committed data. Use at your own risk if performance
  is more important than correctness or if you know that data does not
  change.

* Changed HTTP response code for error number 1521 from 500 to 400.

  Error 1521 (query collection lock failed) is nowadays only emitted by
  traversals, when a collection is accessed during the traversal that has
  not been specified in the WITH statement of the query. 
  Thus returning HTTP 500 is not a good idea, as it is clearly a user error
  that triggered the problem.

* Renamed the `--frontend.*` startup options to `--web-interface.*`:

  - `--frontend.proxy-request.check` -> `--web-interface.proxy-request.check`
  - `--frontend.trusted-proxy` -> `--web-interface.trusted-proxy`
  - `--frontend.version-check` -> `--web-interface.version-check`

  The former startup options are still supported.

* Added Enterprise Graph feature to enterprise version of ArangoDB.
  The enterprise graph is another graph sharding model that we introduced,
  it is less strict, and therefore easier to start with, then SmartGraphs,
  as it does not require a smartGraphAttribute, and allows free choice of
  vertex _key values. But still maintains performance gains as compared to
  general-graphs. For more details please check documentation.

* APM-135: Added multithreading to assigning non-unique indexes to documents,
  in foreground or background mode. The number of index creation threads 
  is hardcoded to 2 for now. Improvements for higher parallelism are expected
  for future versions.

* Issue 15592: Permit `MERGE_RECURSIVE()` to be called with a single argument.

* Fixed issue 16337: arangoimport with `--headers-file` and `--merge-attributes`