@@ -216,6 +216,8 @@ class Query : public QueryContext, public std::enable_shared_from_this<Query> {
   // so user actually has a chance to kill it here.
   void debugKillQuery() override;
 
+  bool allowDirtyReads() const noexcept { return _allowDirtyReads; }
+
  protected:
   /// @brief initializes the query
   void init(bool createProfile);
@@ -356,6 +358,11 @@ class Query : public QueryContext, public std::enable_shared_from_this<Query> {
   // retrigger a kill.
   bool _wasDebugKilled{false};
 #endif
+
+  bool _allowDirtyReads;  // this is set from the information in the
+                          // transaction, it is valid and remains valid
+                          // once `preparePlan` has run and can be queried
+                          // until the query object is gone!
 };
 
 }  // namespace aql
